提交内容：添加过滤器原理多个过滤器 提交详情：多个过滤器测试 提交人：张星亮

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,8 +17,17 @@
 		<filter-name>filter1</filter-name>
 		<filter-class>web.CommentFilter1</filter-class>
 	</filter>
+	<filter>
+		<filter-name>filter2</filter-name>
+		<filter-class>web.CommentFilter2</filter-class>
+	</filter>
+	<!-- 多个过滤器：filter-mapping谁在前面，谁先执行！ -->
 	<filter-mapping>
 		<filter-name>filter1</filter-name>
+		<url-pattern>/comment</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>filter2</filter-name>
 		<url-pattern>/comment</url-pattern>
 	</filter-mapping>
 
