--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
 	<filter>
 		<filter-name>filter2</filter-name>
 		<filter-class>web.CommentFilter2</filter-class>
+		<init-param>
+		<param-name>size</param-name>
+		<param-value>5</param-value>
+		</init-param>
 	</filter>
 	<!-- 多个过滤器：filter-mapping谁在前面，谁先执行！ -->
 	<filter-mapping>
